--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,31 @@
 {
-    "name": "angular-starter-kit",
-    "description": "Starter Kit for Angular 1.5+ projects",
-    "main": "src/index.html",
-    "authors": [
-        "Mike Hatfield <mike.hatfield@nicomit.com>"
-    ],
-    "license": "MIT",
-    "keywords": [
-        "angular",
-        "angularjs",
-        "starter-kit"
-    ],
-    "homepage": "https://github.com/andreasonny83/angular-starter-kit",
-    "private": true,
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "angular": "^1.6.4",
-        "angular-route": "^1.6.4",
-        "angular-animate": "^1.6.4",
-        "bootstrap": "4"
-    },
-    "devDependencies": {
-        "angular-mocks": "^1.6.4"
-    }
+  "name": "angular-starter-kit",
+  "description": "Starter Kit for Angular 1.5+ projects",
+  "main": "src/index.html",
+  "authors": [
+    "Mike Hatfield <mike.hatfield@nicomit.com>"
+  ],
+  "license": "MIT",
+  "keywords": [
+    "angular",
+    "angularjs",
+    "starter-kit"
+  ],
+  "homepage": "https://github.com/andreasonny83/angular-starter-kit",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular": "^1.6.4",
+    "angular-route": "^1.6.4",
+    "angular-animate": "^1.6.4"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.6.4"
+  }
 }
